samples/_failures_safe/1761511056_26928c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be10aa62.c: In function ‘main’:
./samples/SAFE/__tmp_be10aa62.c:161:17: error: expected expression at end of input
  161 |                 fprintf(stderr,
      |                 ^~~~~~~
./samples/SAFE/__tmp_be10aa62.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be10aa62.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be10aa62.c:161:17: error: expected declaration or statement at end of input
